// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`install compliant NPM tag packages it should install tagged version if cli is tagged with beta 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner@beta
- @wdio/mocha-framework@beta
- @wdio/crossbrowsertesting-service@beta
- wdio-lambdatest-service",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`install compliant NPM tag packages it should install tagged version if cli is tagged with latest 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner@latest
- @wdio/mocha-framework@latest
- @wdio/crossbrowsertesting-service@latest
- wdio-lambdatest-service",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`install compliant NPM tag packages it should install tagged version if cli is tagged with next 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner@next
- @wdio/mocha-framework@next
- @wdio/crossbrowsertesting-service@next
- wdio-lambdatest-service",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`install compliant NPM tag packages it should not install tagged version if cli is tagged with a specific version 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`passing arguments should have the "when" method set so that an automatic answer is given 1`] = `
Object {
  "choices": Array [
    Object {
      "name": "mocha",
      "value": "@wdio/mocha-framework$--$mocha",
    },
    Object {
      "name": "jasmine",
      "value": "@wdio/jasmine-framework$--$jasmine",
    },
    Object {
      "name": "cucumber",
      "value": "@wdio/cucumber-framework$--$cucumber",
    },
  ],
  "message": "Which framework do you want to use?",
  "name": "framework",
  "type": "list",
  "when": [Function],
}
`;

exports[`passing arguments should overwrite the default when "yes" is true 1`] = `
Object {
  "installedPackages": Array [
    "@wdio/local-runner",
    "@wdio/cucumber-framework",
    "@wdio/spec-reporter",
    "wdio-chromedriver-service",
  ],
  "parsedAnswers": Object {
    "_async": "async ",
    "_await": "await ",
    "backend": "On my local machine",
    "baseUrl": "http://localhost",
    "destPageObjectRootPath": "/Users/erwinheitzman/Documents/dev/erwin-wdio",
    "destSpecRootPath": "/Users/erwinheitzman/Documents/dev/erwin-wdio/features/",
    "framework": "cucumber",
    "generateTestFiles": true,
    "isSync": false,
    "isUsingBabel": false,
    "isUsingCompiler": "No!",
    "isUsingTypeScript": false,
    "packagesToInstall": Array [
      "@wdio/local-runner",
      "@wdio/cucumber-framework",
      "@wdio/spec-reporter",
      "wdio-chromedriver-service",
    ],
    "pages": undefined,
    "relativePath": "",
    "reporters": Array [
      "spec",
    ],
    "runner": "local",
    "services": Array [
      "chromedriver",
    ],
    "specs": "./features/**/*.feature",
    "stepDefinitions": undefined,
    "usePageObjects": true,
  },
  "success": true,
}
`;

exports[`prints TypeScript setup message 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`prints TypeScript setup message with ts-node installed 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- ts-node
- typescript",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "To have TypeScript support please add the following packages to your \\"types\\" list:
{
  \\"compilerOptions\\": {
    \\"types\\": [\\"node\\", \\"webdriverio/async\\", \\"@wdio/mocha-framework\\", \\"expect-webdriverio\\", \\"@wdio/crossbrowsertesting-service\\"]
  }
}

For for information on TypeScript integration check out: https://webdriver.io/docs/typescript
",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`should create config file 1`] = `
Object {
  "installedPackages": Array [
    "@wdio/local-runner",
    "@wdio/mocha-framework",
    "@wdio/spec-reporter",
    "@wdio/sauce-service",
  ],
  "parsedAnswers": Object {
    "_async": "async ",
    "_await": "await ",
    "framework": "mocha",
    "isSync": false,
    "isUsingBabel": false,
    "isUsingTypeScript": false,
    "packagesToInstall": Array [
      "@wdio/local-runner--$local",
      "@wdio/mocha-framework",
      "@wdio/spec-reporter",
      "@wdio/sauce-service--$sauce",
    ],
    "relativePath": "",
    "reporters": Array [
      "spec",
    ],
    "runner": undefined,
    "services": Array [
      undefined,
    ],
  },
  "success": true,
}
`;

exports[`should install @babel/register if not existing 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service
- @babel/register",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;

exports[`should not install @babel/register if existing 1`] = `
Array [
  Array [
    "
=========================
WDIO Configuration Helper
=========================
",
  ],
  Array [
    "
Installing wdio packages:
-",
    "@wdio/local-runner
- @wdio/mocha-framework
- @wdio/crossbrowsertesting-service
- wdio-lambdatest-service",
  ],
  Array [
    "
Packages installed successfully, creating configuration file...",
  ],
  Array [
    "
Configuration file was created successfully!
To run your tests, execute:
$ npx wdio run wdio.conf.js
",
  ],
]
`;
